tests/integration/commands/manage/auto-uid/requirement_uids/07_error_when_cannot_extract_numeric_part/test.itest
RUN: cp %S/input.sdoc %S/Output/
RUN: %expect_exit 1 %strictdoc manage auto-uid %S/Output/ | filecheck %s --dump-input=fail
CHECK: error: Cannot extract a numeric part from identifier: REQ-ABC.
